content/_generated-doc/2.7/config/quarkus-reactive-pg-client.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-reactive-pg-client_configuration]]link:#quarkus-reactive-pg-client_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-reactive-pg-client_quarkus.datasource.reactive.postgresql.pipelining-limit]]`link:#quarkus-reactive-pg-client_quarkus.datasource.reactive.postgresql.pipelining-limit[quarkus.datasource.reactive.postgresql.pipelining-limit]`

[.description]
--
The maximum number of inflight database commands that can be pipelined.
--|int 
|


a| [[quarkus-reactive-pg-client_quarkus.datasource.reactive.postgresql.ssl-mode]]`link:#quarkus-reactive-pg-client_quarkus.datasource.reactive.postgresql.ssl-mode[quarkus.datasource.reactive.postgresql.ssl-mode]`

[.description]
--
SSL operating mode of the client. 
 See link:https://www.postgresql.org/docs/current/libpq-ssl.html#LIBPQ-SSL-PROTECTION[Protection Provided in Different Modes].
--|`disable`, `allow`, `prefer`, `require`, `verify-ca`, `verify-full` 
|`disable`


h|[[quarkus-reactive-pg-client_quarkus.datasource.named-data-sources-additional-named-datasources]]link:#quarkus-reactive-pg-client_quarkus.datasource.named-data-sources-additional-named-datasources[Additional named datasources]

h|Type
h|Default

a| [[quarkus-reactive-pg-client_quarkus.datasource.-datasource-name-.reactive.postgresql.pipelining-limit]]`link:#quarkus-reactive-pg-client_quarkus.datasource.-datasource-name-.reactive.postgresql.pipelining-limit[quarkus.datasource."datasource-name".reactive.postgresql.pipelining-limit]`

[.description]
--
The maximum number of inflight database commands that can be pipelined.
--|int 
|


a| [[quarkus-reactive-pg-client_quarkus.datasource.-datasource-name-.reactive.postgresql.ssl-mode]]`link:#quarkus-reactive-pg-client_quarkus.datasource.-datasource-name-.reactive.postgresql.ssl-mode[quarkus.datasource."datasource-name".reactive.postgresql.ssl-mode]`

[.description]
--
SSL operating mode of the client. 
 See link:https://www.postgresql.org/docs/current/libpq-ssl.html#LIBPQ-SSL-PROTECTION[Protection Provided in Different Modes].
--|`disable`, `allow`, `prefer`, `require`, `verify-ca`, `verify-full` 
|`disable`

|===